Сделана связь между USER и tasks
